# Captcha-Bypass-with-Playwright-and-Groq-Speech-to-Text-API

./: .gitignore  README.md  pyproject.toml  structure.txt
app/: constants.py  logger_config.py  main.py
app/scrapping/: scrapper.py
app/utils/: path_utils.py
